exmples/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    uptrends.ionos-cloud.github.io/monitor.type: HTTPS
    uptrends.ionos-cloud.github.io/monitor.interval: "5"
spec:
  rules:
  - host: ionos.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service1
            port:
              number: 80
